# prod-ready-ml-public_siva

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
notebooks/: 01_packaging.ipynb
notebooks/cli/: 01_CLI.ipynb
notebooks/generators_iterators/: 02_Generators.ipynb
src/: play_ground.ipynb
src/animal_shelter/: __init__.py  data.py  features.py
