[project]
name = "animal-shelter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sivaprasanth-masilamani", email = "140343551+sivaprasanth-masilamani@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
]

[project.scripts]
animal-shelter = "animal_shelter:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]
